--- a/web/pruebas.ipynb
+++ b/web/pruebas.ipynb
@@ -20,6 +20,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listar=list(data.columns).copy()\n",
+    "a=list(listar).pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Unnamed: 0'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listar.pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'float64'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(type(data[\"Service_rating\"][0])).split(\"'\")[1].replace(\"numpy.\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michelin',\n",
+       " 'Slug',\n",
+       " 'Bookable',\n",
+       " 'Street',\n",
+       " 'ZipCode',\n",
+       " 'Locality',\n",
+       " 'Country',\n",
+       " 'Longitude',\n",
+       " 'Latitude',\n",
+       " 'Cantidad_metodos_pago',\n",
+       " 'Reservas_today',\n",
+       " 'Reservas_last_week',\n",
+       " 'Rate_Distinction',\n",
+       " 'Numero_fotos',\n",
+       " 'Is_Affiliated',\n",
+       " 'Name',\n",
+       " 'Average_Price',\n",
+       " 'Numero_awards',\n",
+       " 'Review_count',\n",
+       " 'Rating_count',\n",
+       " 'Food_rating',\n",
+       " 'Service_rating',\n",
+       " 'Ambience_rating',\n",
+       " 'Tipo_comida',\n",
+       " 'Provincia',\n",
+       " 'Poblacion',\n",
+       " 'Salario Medio Anual']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listar"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
