--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,22 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Bookable', 'Cantidad_metodos_pago', 'Reservas_today',\n",
-       "       'Reservas_last_week', 'Numero_fotos', 'Is_Affiliated', 'Average_Price',\n",
-       "       'Numero_awards', 'Review_count', 'Rating_count', 'Food_rating',\n",
-       "       'Service_rating', 'Ambience_rating', 'Tipo_comida', 'Provincia',\n",
-       "       'Poblacion', 'Salario Medio Anual', 'Michelin numérico',\n",
+       "Index(['Bookable', 'Cantidad_metodos_pago', 'Reservas_last_week',\n",
+       "       'Numero_fotos', 'Is_Affiliated', 'Average_Price', 'Numero_awards',\n",
+       "       'Review_count', 'Rating_count', 'Food_rating', 'Service_rating',\n",
+       "       'Ambience_rating', 'Tipo_comida', 'Provincia', 'Poblacion',\n",
+       "       'Salario Medio Anual', 'Michelin numérico',\n",
        "       'Rate_Distinction_numérico'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,6 +56,49 @@
    "source": [
     "# Eliminamos las columnas innecesarias\n",
     "data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"Sistema de reserva online\"\n",
+    "\"Cantidad métodos de pago\"\n",
+    "\"Reservas última semana\"\n",
+    "\"Número de fotos online\"\n",
+    "\"Afiliado a The Fork\"\n",
+    "\"Número de premios\"\n",
+    "\"Número de comentarios\"\n",
+    "\"Número de reseñas\"\n",
+    "\"Calidad de comida\"\n",
+    "\"Calidad del servicio\"\n",
+    "\"Calidad del ambiente\"\n",
+    "\"Tipo de comida\"\n",
+    "\"Provincia\"\n",
+    "\"Población\"\n",
+    "\"Salario Medio Anual\"\n",
+    "\"Es Michelin\"\n",
+    "\"Restaurante con distinción\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.,  2.,  1., nan])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Rate_Distinction_numérico\"].unique()"
    ]
   },
   {
