--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -59,6 +59,130 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Salario Medio Anual</th>\n",
+       "      <th>Poblacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>madrid</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>6751251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1567</th>\n",
+       "      <td>barcelona</td>\n",
+       "      <td>24243</td>\n",
+       "      <td>5714730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2999</th>\n",
+       "      <td>valencia</td>\n",
+       "      <td>20069</td>\n",
+       "      <td>2589312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3463</th>\n",
+       "      <td>sevilla</td>\n",
+       "      <td>17710</td>\n",
+       "      <td>1947852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4005</th>\n",
+       "      <td>malaga</td>\n",
+       "      <td>17390</td>\n",
+       "      <td>1695651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4449</th>\n",
+       "      <td>alicante</td>\n",
+       "      <td>17139</td>\n",
+       "      <td>1881762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5019</th>\n",
+       "      <td>islas baleares</td>\n",
+       "      <td>19834</td>\n",
+       "      <td>1173008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Provincia  Salario Medio Anual  Poblacion\n",
+       "0             madrid                26721    6751251\n",
+       "1567       barcelona                24243    5714730\n",
+       "2999        valencia                20069    2589312\n",
+       "3463         sevilla                17710    1947852\n",
+       "4005          malaga                17390    1695651\n",
+       "4449        alicante                17139    1881762\n",
+       "5019  islas baleares                19834    1173008"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[\"Provincia\",\"Salario Medio Anual\",\"Poblacion\"]].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'madrid': [26721, 6751251],\n",
+       " 'barcelona': [24243, 5714730],\n",
+       " 'valencia': [20069, 2589312],\n",
+       " 'sevilla': [17710, 1947852],\n",
+       " 'malaga': [17390, 1695651],\n",
+       " 'alicante': [17139, 1881762],\n",
+       " 'islas baleares': [19834, 1173008]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\"madrid\":[26721,6751251],\"barcelona\":[24243,5714730],\"valencia\":[20069,2589312],\"sevilla\":[17710,1947852],\"malaga\":[17390,1695651],\"alicante\":[17139,1881762],\"islas baleares\":[19834,1173008]}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +216,7 @@
        "array([ 3.,  2.,  1., nan])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -112,30 +236,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 5640 entries, 0 to 7607\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 18 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
       " 0   Bookable                   5640 non-null   bool   \n",
       " 1   Cantidad_metodos_pago      5640 non-null   int64  \n",
-      " 2   Reservas_today             5640 non-null   int64  \n",
-      " 3   Reservas_last_week         5640 non-null   int64  \n",
-      " 4   Numero_fotos               5640 non-null   int64  \n",
-      " 5   Is_Affiliated              5640 non-null   bool   \n",
-      " 6   Average_Price              5640 non-null   float64\n",
-      " 7   Numero_awards              5640 non-null   int64  \n",
-      " 8   Review_count               5639 non-null   float64\n",
-      " 9   Rating_count               5639 non-null   float64\n",
-      " 10  Food_rating                5115 non-null   float64\n",
-      " 11  Service_rating             5115 non-null   float64\n",
-      " 12  Ambience_rating            5115 non-null   float64\n",
-      " 13  Tipo_comida                5640 non-null   object \n",
-      " 14  Provincia                  5640 non-null   object \n",
-      " 15  Poblacion                  5640 non-null   int64  \n",
-      " 16  Salario Medio Anual        5640 non-null   int64  \n",
-      " 17  Michelin numérico          5640 non-null   int64  \n",
-      " 18  Rate_Distinction_numérico  4750 non-null   float64\n",
-      "dtypes: bool(2), float64(7), int64(8), object(2)\n",
-      "memory usage: 804.1+ KB\n"
+      " 2   Reservas_last_week         5640 non-null   int64  \n",
+      " 3   Numero_fotos               5640 non-null   int64  \n",
+      " 4   Is_Affiliated              5640 non-null   bool   \n",
+      " 5   Average_Price              5640 non-null   float64\n",
+      " 6   Numero_awards              5640 non-null   int64  \n",
+      " 7   Review_count               5639 non-null   float64\n",
+      " 8   Rating_count               5639 non-null   float64\n",
+      " 9   Food_rating                5115 non-null   float64\n",
+      " 10  Service_rating             5115 non-null   float64\n",
+      " 11  Ambience_rating            5115 non-null   float64\n",
+      " 12  Tipo_comida                5640 non-null   object \n",
+      " 13  Provincia                  5640 non-null   object \n",
+      " 14  Poblacion                  5640 non-null   int64  \n",
+      " 15  Salario Medio Anual        5640 non-null   int64  \n",
+      " 16  Michelin numérico          5640 non-null   int64  \n",
+      " 17  Rate_Distinction_numérico  4750 non-null   float64\n",
+      "dtypes: bool(2), float64(7), int64(7), object(2)\n",
+      "memory usage: 760.1+ KB\n"
      ]
     }
    ],
@@ -152,16 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.08319974189277812\n",
-      "Root Mean Squared Error: 0.28844365462387644\n"
+      "Mean Squared Error: 0.08285266201629382\n",
+      "Root Mean Squared Error: 0.2878413834324276\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_model.pkl']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -171,6 +304,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
+    "import joblib\n",
     "\n",
     "df=data.copy()\n",
     "# Suponiendo que tienes un DataFrame llamado df con tus datos\n",
@@ -199,8 +333,27 @@
     "rmse = np.sqrt(mse)\n",
     "print(\"Root Mean Squared Error:\", rmse)\n",
     "\n",
-    "# joblib.dump(pipeline, 'random_forest_model.pkl')"
+    "joblib.dump(pipeline, 'random_forest_model.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([30.30631754, 19.28650543, 20.81070645, ..., 36.78932192,\n",
+       "       18.55174751, 30.30631754])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -211,16 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Parameters: {'regressor__max_depth': None, 'regressor__min_samples_split': 10, 'regressor__n_estimators': 300}\n",
-      "Mean Squared Error: 275.99472673165883\n",
-      "Root Mean Squared Error: 16.61308901835113\n"
+     "ename": "NameError",
+     "evalue": "name 'mse' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_2672\\1104664612.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbest_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;31m# mse = mean_squared_error(y_test, y_pred)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mrmse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Best Parameters:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrid_search\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mse' is not defined"
      ]
     }
    ],
@@ -267,12 +422,49 @@
     "\n",
     "# Predecir y calcular los errores\n",
     "y_pred = best_model.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
+    "# mse = mean_squared_error(y_test, y_pred)\n",
+    "# rmse = np.sqrt(mse)\n",
     "\n",
-    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "# print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "# print(\"Mean Squared Error:\", mse)\n",
+    "# print(\"Root Mean Squared Error:\", rmse)\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "\n",
+    "df=data.copy()\n",
+    "# Suponiendo que tienes un DataFrame llamado df con tus datos\n",
+    "X = df.drop(columns=['Average_Price'])\n",
+    "y = df['Average_Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define el preprocesamiento\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[('cat', OneHotEncoder(handle_unknown='ignore'), ['Tipo_comida', 'Provincia'])] #, 'Poblacion'\n",
+    ")\n",
+    "\n",
+    "# Define el pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', RandomForestRegressor())\n",
+    "])\n",
+    "\n",
+    "# Entrena el modelo\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Evalúa el modelo\n",
+    "mse = pipeline.score(X_test, y_test)\n",
     "print(\"Mean Squared Error:\", mse)\n",
-    "print(\"Root Mean Squared Error:\", rmse)\n"
+    "rmse = np.sqrt(mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "\n",
+    "\n"
    ]
   },
   {
