--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -338,22 +338,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bookable</th>\n",
+       "      <th>Cantidad_metodos_pago</th>\n",
+       "      <th>Reservas_last_week</th>\n",
+       "      <th>Numero_fotos</th>\n",
+       "      <th>Is_Affiliated</th>\n",
+       "      <th>Average_Price</th>\n",
+       "      <th>Numero_awards</th>\n",
+       "      <th>Review_count</th>\n",
+       "      <th>Rating_count</th>\n",
+       "      <th>Food_rating</th>\n",
+       "      <th>Service_rating</th>\n",
+       "      <th>Ambience_rating</th>\n",
+       "      <th>Tipo_comida</th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Poblacion</th>\n",
+       "      <th>Salario Medio Anual</th>\n",
+       "      <th>Michelin numérico</th>\n",
+       "      <th>Rate_Distinction_numérico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32</td>\n",
+       "      <td>17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>Colombian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([30.30631754, 19.28650543, 20.81070645, ..., 36.78932192,\n",
-       "       18.55174751, 30.30631754])"
+       "   Bookable  Cantidad_metodos_pago  Reservas_last_week  Numero_fotos  \\\n",
+       "0      True                      5                  32            17   \n",
+       "\n",
+       "   Is_Affiliated  Average_Price  Numero_awards  Review_count  Rating_count  \\\n",
+       "0           True          125.0              1         255.0         479.0   \n",
+       "\n",
+       "   Food_rating  Service_rating  Ambience_rating Tipo_comida Provincia  \\\n",
+       "0          9.7             9.9              9.5   Colombian    madrid   \n",
+       "\n",
+       "   Poblacion  Salario Medio Anual  Michelin numérico  \\\n",
+       "0    6751251                26721                  1   \n",
+       "\n",
+       "   Rate_Distinction_numérico  \n",
+       "0                        3.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.head(1)"
+   ]
   },
   {
    "cell_type": "markdown",
