--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,6 +57,229 @@
    "source": [
     "# Eliminamos las columnas innecesarias\n",
     "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([62.33868651, 28.20375281, 26.04446445, 26.04446445])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_cargado=joblib.load(\"random_forest_model.pkl\")\n",
+    "modelo_cargado.predict(data.head(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bookable</th>\n",
+       "      <th>Cantidad_metodos_pago</th>\n",
+       "      <th>Reservas_last_week</th>\n",
+       "      <th>Numero_fotos</th>\n",
+       "      <th>Is_Affiliated</th>\n",
+       "      <th>Average_Price</th>\n",
+       "      <th>Numero_awards</th>\n",
+       "      <th>Review_count</th>\n",
+       "      <th>Rating_count</th>\n",
+       "      <th>Food_rating</th>\n",
+       "      <th>Service_rating</th>\n",
+       "      <th>Ambience_rating</th>\n",
+       "      <th>Tipo_comida</th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Poblacion</th>\n",
+       "      <th>Salario Medio Anual</th>\n",
+       "      <th>Michelin numérico</th>\n",
+       "      <th>Rate_Distinction_numérico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32</td>\n",
+       "      <td>17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>Colombian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>7</td>\n",
+       "      <td>115</td>\n",
+       "      <td>14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3318.0</td>\n",
+       "      <td>7977.0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Fusion</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>140</td>\n",
+       "      <td>11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>2590.0</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>7</td>\n",
+       "      <td>234</td>\n",
+       "      <td>14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>907.0</td>\n",
+       "      <td>3047.0</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>Mexican</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Bookable  Cantidad_metodos_pago  Reservas_last_week  Numero_fotos  \\\n",
+       "0      True                      5                  32            17   \n",
+       "1      True                      7                 115            14   \n",
+       "2      True                      3                  57             8   \n",
+       "3      True                      6                 140            11   \n",
+       "4      True                      7                 234            14   \n",
+       "\n",
+       "   Is_Affiliated  Average_Price  Numero_awards  Review_count  Rating_count  \\\n",
+       "0           True          125.0              1         255.0         479.0   \n",
+       "1           True           23.0              0        3318.0        7977.0   \n",
+       "2           True           30.0              0          24.0          99.0   \n",
+       "3           True           55.0              0         824.0        2590.0   \n",
+       "4           True           25.0              0         907.0        3047.0   \n",
+       "\n",
+       "   Food_rating  Service_rating  Ambience_rating Tipo_comida Provincia  \\\n",
+       "0          9.7             9.9              9.5   Colombian    madrid   \n",
+       "1          9.3             9.5              9.3      Fusion    madrid   \n",
+       "2          9.0             9.3              9.1       Asian    madrid   \n",
+       "3          9.6             9.3              9.4       Asian    madrid   \n",
+       "4          9.1             9.3              9.2     Mexican    madrid   \n",
+       "\n",
+       "   Poblacion  Salario Medio Anual  Michelin numérico  \\\n",
+       "0    6751251                26721                  1   \n",
+       "1    6751251                26721                  0   \n",
+       "2    6751251                26721                  0   \n",
+       "3    6751251                26721                  0   \n",
+       "4    6751251                26721                  0   \n",
+       "\n",
+       "   Rate_Distinction_numérico  \n",
+       "0                        3.0  \n",
+       "1                        3.0  \n",
+       "2                        3.0  \n",
+       "3                        3.0  \n",
+       "4                        3.0  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
    ]
   },
   {
