--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -34,29 +34,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5640 entries, 0 to 7607\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   Bookable                   5640 non-null   bool   \n",
+      " 1   Cantidad_metodos_pago      5640 non-null   int64  \n",
+      " 2   Reservas_last_week         5640 non-null   int64  \n",
+      " 3   Numero_fotos               5640 non-null   int64  \n",
+      " 4   Is_Affiliated              5640 non-null   bool   \n",
+      " 5   Average_Price              5640 non-null   float64\n",
+      " 6   Numero_awards              5640 non-null   int64  \n",
+      " 7   Review_count               5639 non-null   float64\n",
+      " 8   Rating_count               5639 non-null   float64\n",
+      " 9   Food_rating                5115 non-null   float64\n",
+      " 10  Service_rating             5115 non-null   float64\n",
+      " 11  Ambience_rating            5115 non-null   float64\n",
+      " 12  Tipo_comida                5640 non-null   object \n",
+      " 13  Provincia                  5640 non-null   object \n",
+      " 14  Poblacion                  5640 non-null   int64  \n",
+      " 15  Salario Medio Anual        5640 non-null   int64  \n",
+      " 16  Michelin numérico          5640 non-null   int64  \n",
+      " 17  Rate_Distinction_numérico  4750 non-null   float64\n",
+      "dtypes: bool(2), float64(7), int64(7), object(2)\n",
+      "memory usage: 760.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Eliminamos las columnas innecesarias\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bookable</th>\n",
+       "      <th>Cantidad_metodos_pago</th>\n",
+       "      <th>Reservas_last_week</th>\n",
+       "      <th>Numero_fotos</th>\n",
+       "      <th>Is_Affiliated</th>\n",
+       "      <th>Average_Price</th>\n",
+       "      <th>Numero_awards</th>\n",
+       "      <th>Review_count</th>\n",
+       "      <th>Rating_count</th>\n",
+       "      <th>Food_rating</th>\n",
+       "      <th>Service_rating</th>\n",
+       "      <th>Ambience_rating</th>\n",
+       "      <th>Tipo_comida</th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Poblacion</th>\n",
+       "      <th>Salario Medio Anual</th>\n",
+       "      <th>Michelin numérico</th>\n",
+       "      <th>Rate_Distinction_numérico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32</td>\n",
+       "      <td>17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>Colombian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>7</td>\n",
+       "      <td>115</td>\n",
+       "      <td>14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3318.0</td>\n",
+       "      <td>7977.0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Fusion</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>3</td>\n",
+       "      <td>57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>6</td>\n",
+       "      <td>140</td>\n",
+       "      <td>11</td>\n",
+       "      <td>True</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>2590.0</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>7</td>\n",
+       "      <td>234</td>\n",
+       "      <td>14</td>\n",
+       "      <td>True</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>907.0</td>\n",
+       "      <td>3047.0</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>Mexican</td>\n",
+       "      <td>madrid</td>\n",
+       "      <td>6751251</td>\n",
+       "      <td>26721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Bookable', 'Cantidad_metodos_pago', 'Reservas_last_week',\n",
-       "       'Numero_fotos', 'Is_Affiliated', 'Average_Price', 'Numero_awards',\n",
-       "       'Review_count', 'Rating_count', 'Food_rating', 'Service_rating',\n",
-       "       'Ambience_rating', 'Tipo_comida', 'Provincia', 'Poblacion',\n",
-       "       'Salario Medio Anual', 'Michelin numérico',\n",
-       "       'Rate_Distinction_numérico'],\n",
-       "      dtype='object')"
+       "   Bookable  Cantidad_metodos_pago  Reservas_last_week  Numero_fotos  \\\n",
+       "0      True                      5                  32            17   \n",
+       "1      True                      7                 115            14   \n",
+       "2      True                      3                  57             8   \n",
+       "3      True                      6                 140            11   \n",
+       "4      True                      7                 234            14   \n",
+       "\n",
+       "   Is_Affiliated  Average_Price  Numero_awards  Review_count  Rating_count  \\\n",
+       "0           True          125.0              1         255.0         479.0   \n",
+       "1           True           23.0              0        3318.0        7977.0   \n",
+       "2           True           30.0              0          24.0          99.0   \n",
+       "3           True           55.0              0         824.0        2590.0   \n",
+       "4           True           25.0              0         907.0        3047.0   \n",
+       "\n",
+       "   Food_rating  Service_rating  Ambience_rating Tipo_comida Provincia  \\\n",
+       "0          9.7             9.9              9.5   Colombian    madrid   \n",
+       "1          9.3             9.5              9.3      Fusion    madrid   \n",
+       "2          9.0             9.3              9.1       Asian    madrid   \n",
+       "3          9.6             9.3              9.4       Asian    madrid   \n",
+       "4          9.1             9.3              9.2     Mexican    madrid   \n",
+       "\n",
+       "   Poblacion  Salario Medio Anual  Michelin numérico  \\\n",
+       "0    6751251                26721                  1   \n",
+       "1    6751251                26721                  0   \n",
+       "2    6751251                26721                  0   \n",
+       "3    6751251                26721                  0   \n",
+       "4    6751251                26721                  0   \n",
+       "\n",
+       "   Rate_Distinction_numérico  \n",
+       "0                        3.0  \n",
+       "1                        3.0  \n",
+       "2                        3.0  \n",
+       "3                        3.0  \n",
+       "4                        3.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Eliminamos las columnas innecesarias\n",
-    "data.columns"
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([62.33868651])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_cargado=joblib.load(\"random_forest_model.pkl\")\n",
+    "\n",
+    "dic_sal_pob={\"madrid\":[26721,6751251],\"barcelona\":[24243,5714730],\"valencia\":[20069,2589312],\"sevilla\":[17710,1947852],\"malaga\":[17390,1695651],\"alicante\":[17139,1881762],\"islas baleares\":[19834,1173008]}\n",
+    "data_to_predict={\"Bookable\": [True],\"Cantidad_metodos_pago\":[3],\n",
+    "            \"Reservas_last_week\":[34],\"Numero_fotos\":[34],\"Is_Affiliated\":[True],\n",
+    "            \"Numero_awards\":[2],\"Review_count\":[float(35)],\"Rating_count\":[float(355)],\n",
+    "            \"Food_rating\":[8.0],\"Service_rating\":[6.0],\"Ambience_rating\":[9.0],\n",
+    "            \"Provincia\":[\"madrid\"],\"Poblacion\": [dic_sal_pob[\"madrid\"][1]],\"Salario Medio Anual\": [dic_sal_pob[\"madrid\"][0]],\n",
+    "            \"Michelin numérico\":[True],\"Rate_Distinction_numérico\":[1],\"Tipo_comida\":[\"Colombian\"]}\n",
+    "data_to_predict_df = pd.DataFrame(data_to_predict)\n",
+    "#MICHELIN NUMERO\n",
+    "\n",
+    "modelo_cargado.predict(data_to_predict_df)"
    ]
   },
   {
@@ -76,8 +325,141 @@
     }
    ],
    "source": [
-    "modelo_cargado=joblib.load(\"random_forest_model.pkl\")\n",
     "modelo_cargado.predict(data.head(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_to_predict={\"Sistema de reserva online\": 0,\"Cantidad métodos de pago\":0,\n",
+    "            \"Reservas última semana\":0,\"Número de fotos online\":0,\"Afiliado a The Fork\":0,\n",
+    "            \"Número de premios\":0,\"Número de comentarios\":0,\"Número de reseñas\":0,\n",
+    "            \"Calidad de comida\":0,\"Calidad del servicio\":0,\"Calidad del ambiente\":0,\n",
+    "            \"Provincia\":0,\"Población\": 0,\"Salario Medio Anual\": 0,\n",
+    "            \"Es Michelin\":0,\"Restaurante con distinción\":0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sistema de reserva online\n",
+      "Cantidad métodos de pago\n",
+      "Reservas última semana\n",
+      "Número de fotos online\n",
+      "Afiliado a The Fork\n",
+      "Número de premios\n",
+      "Número de comentarios\n",
+      "Número de reseñas\n",
+      "Calidad de comida\n",
+      "Calidad del servicio\n",
+      "Calidad del ambiente\n",
+      "Población\n",
+      "Es Michelin\n",
+      "Restaurante con distinción\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in data_to_predict.keys():\n",
+    "    if i not in data.columns:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.08285266201629382\n",
+      "Root Mean Squared Error: 0.2878413834324276\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['random_forest_model.pkl']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "\n",
+    "df=data.copy()\n",
+    "# Suponiendo que tienes un DataFrame llamado df con tus datos\n",
+    "X = df.drop(columns=['Average_Price'])\n",
+    "y = df['Average_Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define el preprocesamiento\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[('cat', OneHotEncoder(handle_unknown='ignore'), ['Tipo_comida', 'Provincia'])] #, 'Poblacion'\n",
+    ")\n",
+    "\n",
+    "# Define el pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', RandomForestRegressor())\n",
+    "])\n",
+    "\n",
+    "# Entrena el modelo\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Evalúa el modelo\n",
+    "mse = pipeline.score(X_test, y_test)\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "rmse = np.sqrt(mse)\n",
+    "print(\"Root Mean Squared Error:\", rmse)\n",
+    "\n",
+    "joblib.dump(pipeline, 'random_forest_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Bookable', 'Cantidad_metodos_pago', 'Reservas_last_week',\n",
+       "       'Numero_fotos', 'Is_Affiliated', 'Average_Price', 'Numero_awards',\n",
+       "       'Review_count', 'Rating_count', 'Food_rating', 'Service_rating',\n",
+       "       'Ambience_rating', 'Tipo_comida', 'Provincia', 'Poblacion',\n",
+       "       'Salario Medio Anual', 'Michelin numérico',\n",
+       "       'Rate_Distinction_numérico'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
    ]
   },
   {
