connect model to inputs

--- a/models/model_cities/model.ipynb
+++ b/models/model_cities/model.ipynb
@@ -344,6 +344,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "print(sklearn.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "            # data_to_predict={\"Bookable\": [True],\"Cantidad_metodos_pago\":[3],\n",
+    "            # \"Reservas_last_week\":[34],\"Numero_fotos\":[34],\"Is_Affiliated\":[True],\n",
+    "            # \"Numero_awards\":[2],\"Review_count\":[float(35)],\"Rating_count\":[float(355)],\n",
+    "            # \"Food_rating\":[8.0],\"Service_rating\":[6.0],\"Ambience_rating\":[9.0],\n",
+    "            # \"Provincia\":[\"madrid\"],\"Poblacion\": [dic_sal_pob[\"madrid\"][1]],\"Salario Medio Anual\": [dic_sal_pob[\"madrid\"][0]],\n",
+    "            # \"Michelin numérico\":[True],\"Rate_Distinction_numérico\":[1],\"Tipo_comida\":[\"Colombian\"]}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
